--- a/pages/AboutMe.html
+++ b/pages/AboutMe.html
@@ -4,36 +4,60 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
+
 </head>
 <body class="bodyAbout">
     <header>
-        <nav class="navegacionDos"> <!--BARRA DE NAVEGACION-->
-            <div class="nav-links">
-                <ul class="lista-nav">
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="#">Conócenos</a></li>
-                    <li><a href="./Destinos.html">Destinos</a></li>
-                    <li><a href="./Tours.html">Tours</a></li>
-                    <li><a href="./Contacto.html">Contacto</a></li>
-                </ul>
+        <nav class="navbar navbar-expand-lg navegacionDos w-100">
+            <div class="container-fluid w-100">
+                <a class="navbar-brand" href="#">
+                    <img src="../assets/img/logo negativo.png" alt="Logo" class="logo">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto lista-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Conócenos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../pages/Destinos.html">Destinos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./Tours.html">Tours</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../pages/Contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </nav>
     </header>
     <main class="decoMain">
-        <section class="contenedorAbout">
-            <div class="sobreNosotros">
-                <h1 class="tituloAbout">Acerca de nosotros</h1>    
-                <h2 class="subtUno">Conectamos personas con la magia de las montañas</h2>
-                <article class="textoAbout">Nos dedicamos a crear experiencias únicas para quienes aman descubrir el mundo a través de senderos y cumbres. Nos complace compartir nuestra pasión por la naturaleza, guiando a viajeros hacia paisajes impresionantes y momentos inolvidables. Cada recorrido es diseñado con cuidado, combinando seguridad, compañerismo y un profundo respeto por el entorno. Porque creemos que el trekking no es solo caminar, sino conectar con la esencia de cada destino y con uno mismo.</article>
-            </div>
-            <div class="imgAbout">
-                <img src="../assets/img/Montañista-aboutus.jpg" alt="Montañista con campera naranja" width="557" height="894" class="modifImagen">    
+        <section class="contenedorAbout container">
+            <div class="row">
+                <div class="col-lg-6 col-md-12 sobreNosotros">
+                    <h1 class="tituloAbout">Acerca de nosotros</h1>    
+                    <h2 class="subtUno">Conectamos personas con la magia de las montañas</h2>
+                    <article class="textoAbout">Nos dedicamos a crear experiencias únicas para quienes aman descubrir el mundo a través de senderos y cumbres. Nos complace compartir nuestra pasión por la naturaleza, guiando a viajeros hacia paisajes impresionantes y momentos inolvidables. Cada recorrido es diseñado con cuidado, combinando seguridad, compañerismo y un profundo respeto por el entorno. Porque creemos que el trekking no es solo caminar, sino conectar con la esencia de cada destino y con uno mismo.</article>
+                </div>
+                <div class="col-lg-6 col-md-12 imgAbout">
+                    <img src="../assets/img/Montañista-aboutus.jpg" alt="Montañista con campera naranja" class="img-fluid modifImagen">    
+                </div>
             </div>
         </section>
     </main>
     <footer>
     </footer>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+
 </body>
 </html>
