--- a/pages/Destinos.html
+++ b/pages/Destinos.html
@@ -4,19 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body class="bodyDestinos">
     <header>
-        <nav class="navegacionDos">
-            <div class="nav-links">
-                <ul class="lista-nav">
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="./AboutMe.html">Conócenos</a></li>
-                    <li><a href="#">Destinos</a></li>
-                    <li><a href="./Tours.html">Tours</a></li>
-                    <li><a href="./Contacto.html">Contacto</a></li>
-                </ul>
+        <nav class="navbar navbar-expand-lg navegacionDos w-100">
+            <div class="container-fluid w-100">
+                <a class="navbar-brand" href="#">
+                    <img src="../assets/img/logo negativo.png" alt="Logo" class="logo">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto lista-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../pages/AboutMe.html">Conócenos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Destinos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./Tours.html">Tours</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./Contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </nav>
     </header>
@@ -25,35 +44,43 @@
         <h1 class="tituloUno">Destinos</h1>
         <h2 class="subtUno">Explora sin limites</h2>
     
-        <section class="card"> <!--Contenedor-->
-            <div class="cardDestino"> <!--Primera caja-->
-                <img src="../assets/img/Aconcagua.png" alt="Aconcagua Argentina" width="200" height="200">    
-                <h3>Argentina</h3>
-                <span>Aconcagua</span>
-            </div>
-
-            <div class="cardDestino"> <!--Segunda caja-->
-                <img src="../assets/img/Canada.jpg" alt="Canada Montaña" width="200" height="200">
-                <h3>Canadá</h3>
-                <span>Banff National Park</span>
-            </div>
-
-            <div class="cardDestino"> <!--Tercera caja-->
-                <img src="../assets/img/Noruega.png" alt="Noruega Lofoten" width="200" height="200">
-                <h3>Noruega</h3>
-                <span>Isla Lofoten</span>
-            </div>
-
-            <div class="cardDestino"> <!--Cuarta caja-->
-                <img src="../assets/img/Peru.jpg" alt="Coordillera Peru" width="200" height="200">
-                <h3>Perú</h3>
-                <span>Coordillera Huayhuash</span>
+        <section class="container">
+            <div class="row">
+                <div class="col-12 col-md-6 col-lg-3">
+                    <div class="cardDestino"> <!--Primera caja-->
+                        <img src="../assets/img/Aconcagua.png" alt="Aconcagua Argentina">    
+                        <h3>Argentina</h3>
+                        <span>Aconcagua</span>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-3">
+                    <div class="cardDestino"> <!--Segunda caja-->
+                        <img src="../assets/img/Canada.jpg" alt="Canada Montaña">
+                        <h3>Canadá</h3>
+                        <span>Banff National Park</span>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-3">
+                    <div class="cardDestino"> <!--Tercera caja-->
+                        <img src="../assets/img/Noruega.png" alt="Noruega Lofoten">
+                        <h3>Noruega</h3>
+                        <span>Isla Lofoten</span>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-3">
+                    <div class="cardDestino"> <!--Cuarta caja-->
+                        <img src="../assets/img/Peru.jpg" alt="Coordillera Peru">
+                        <h3>Perú</h3>
+                        <span>Coordillera Huayhuash</span>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
 
     <footer>
-    </footer>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
 
 </html>
