--- a/index.html
+++ b/index.html
@@ -4,37 +4,64 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/style.css">
+
 </head>
 <body class="cuerpoIndex">
     <header>
-        <nav class="navegacionUno"> <!-- BARRA DE NAVEGACION -->
-            <div class="nav-container"> <!-- Contenedor general nav -->
-                <h1 class="titulo-princ">Mountain Oddysey</h1>
-                <img src="./assets/img/logo negativo.png" alt="Logo Mountain Oddysey" class="logo">
-            </div>
-            <div class="nav-links">
-                <ul class="lista-nav"> 
-                    <li><a href="#">Home</a></li>
-                    <li><a href="./pages/AboutMe.html">Conócenos</a></li>
-                    <li><a href="./pages/Destinos.html">Destinos</a></li>
-                    <li><a href="./pages/Tours.html">Tours</a></li>
-                    <li><a href="./pages/Contacto.html">Contacto</a></li>
-                </ul>
+        <nav class="navbar navbar-expand-lg navegacionDos w-100">
+            <div class="container-fluid w-100">
+                <a class="navbar-brand" href="#">
+                    <img src="../assets/img/logo negativo.png" alt="Logo" class="logo">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto lista-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./pages/AboutMe.html">Conócenos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./pages/Destinos.html">Destinos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./Tours.html">Tours</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./pages/Contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </nav>
     </header>
-
-    <main class="contenedor-main">
-        <img src="./assets/img/Presentacion.jpg" alt="Hombre Montaña" class="presentacionImg">
-        <h2 class="tituloAventura">Es hora de elegir tu próximo destino</h2>
-            <div class="contenedor-boton">
-            <button class="botonIndex">Comienza tu aventura</button>
+    
+    <main class="container contenedor-main text-center">
+        <div class="row">
+            <div class="col-12">
+                <img src="./assets/img/Presentacion.jpg" alt="Hombre Montaña" class="img-fluid w-100 presentacionImg">
             </div>
+            <div class="col-12">
+                <h2 class="tituloAventura">Es hora de elegir tu próximo destino</h2>
+            </div>
+            <div class="col-12">
+                <div class="contenedor-boton">
+                    <button class="btn btn-primary botonIndex">Comienza tu aventura</button>
+                </div>
+            </div>
+        </div>
     </main>
-
     <footer>
-    <!-- Pre entrega Cecilia Grudine -->
+    <!--Entrega final Cecilia Grudine -->
     </footer>
+
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+
 </body>
 </html>
