--- a/pages/AboutMe.html
+++ b/pages/AboutMe.html
@@ -6,6 +6,8 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;700&family=Lora:wght@400;700&display=swap" rel="stylesheet">
+
 
 </head>
 <body class="bodyAbout">
@@ -43,12 +45,12 @@
     <main class="decoMain">
         <section class="contenedorAbout container">
             <div class="row">
-                <div class="col-lg-6 col-md-12 sobreNosotros">
+                <div class="col-lg-6 col-md-12 order-md-1 order-2 sobreNosotros">
                     <h1 class="tituloAbout">Acerca de nosotros</h1>    
                     <h2 class="subtUno">Conectamos personas con la magia de las montañas</h2>
                     <article class="textoAbout">Nos dedicamos a crear experiencias únicas para quienes aman descubrir el mundo a través de senderos y cumbres. Nos complace compartir nuestra pasión por la naturaleza, guiando a viajeros hacia paisajes impresionantes y momentos inolvidables. Cada recorrido es diseñado con cuidado, combinando seguridad, compañerismo y un profundo respeto por el entorno. Porque creemos que el trekking no es solo caminar, sino conectar con la esencia de cada destino y con uno mismo.</article>
                 </div>
-                <div class="col-lg-6 col-md-12 imgAbout">
+                <div class="col-lg-6 col-md-12 order-md-2 order-1 imgAbout">
                     <img src="../assets/img/Montañista-aboutus.jpg" alt="Montañista con campera naranja" class="img-fluid modifImagen">    
                 </div>
             </div>
