--- a/pages/Destinos.html
+++ b/pages/Destinos.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Sitio web de Mountain Odyssey, con los mejores destinos turisticos para trekking y montañismo" />
+    <title>Mountain Odyssey - Destinos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -14,6 +15,7 @@
                 <a class="navbar-brand" href="#">
                     <img src="../assets/img/logo negativo.png" alt="Logo" class="logo">
                 </a>
+                <h1 class="tituloHeader">Mountain Odyssey</h1>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
