--- a/index.html
+++ b/index.html
@@ -6,10 +6,17 @@
     <meta name="description" content="Sitio web de Mountain Odyssey, especialistas en trekking y senderismo." />
     <meta name="robots" content="index, follow">
     <meta name="author" content="Cecilia Grudine">
+    <meta property="og:title" content=Encontra los mejores destinos de trekking y montañismo>
+    <meta property="og:site_name" content=Mountain Odyssey>
+    <meta property="og:url" content=https://mountainodyssey.netlify.app/>
+    <meta property="og:description" content=Es momento de planear tu próxima aventura. Somos expertos en trekking y hemos seleccionado los mejores destinos y tours para que vivas una experiencia inolvidable.>
+    <meta property="og:type" content="">
+    <meta property="og:image" content=https://mountainodyssey.netlify.app/assets/img/Presentacion.jpg>
     <title>Mountain Odyssey - Inicio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="icon" href="./assets/img/logo negativo.png" type="image/x-icon">
+
 
 </head>
 <body class="cuerpoIndex">
