--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
+                <section class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto lista-nav">
                         <li class="nav-item">
                             <a class="nav-link" href="#">Inicio</a>
@@ -42,31 +42,35 @@
                             <a class="nav-link" href="./pages/Destinos.html">Destinos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./Tours.html">Tours</a>
+                            <a class="nav-link" href="./pages/Tours.html">Tours</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./pages/Contacto.html">Contacto</a>
                         </li>
                     </ul>
-                </div>
+                </section>
             </div>
         </nav>
     </header>
     
     <main class="container contenedor-main text-center">
-        <div class="row">
+        <section class="row">
             <div class="col-12">
                 <img src="./assets/img/Presentacion.jpg" alt="Hombre Montaña" class="img-fluid w-100 presentacionImg">
             </div>
+        </section>
+        <section class="row">
             <div class="col-12">
                 <h2 class="tituloAventura">Es hora de elegir tu próximo destino</h2>
             </div>
+        </section>
+        <section class="row">
             <div class="col-12">
                 <div class="contenedor-boton">
-                    <button class="btn btn-primary botonIndex">Comienza tu aventura</button>
+                    <button class="btn btn-primary botonIndex"><strong>Comienza tu aventura</strong></button>
                 </div>
             </div>
-        </div>
+        </section>
     </main>
     <footer>
 
