--- a/pages/AboutMe.html
+++ b/pages/AboutMe.html
@@ -22,7 +22,7 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
+                <section class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto lista-nav">
                         <li class="nav-item">
                             <a class="nav-link" href="../index.html">Inicio</a>
@@ -31,16 +31,16 @@
                             <a class="nav-link" href="#">Conócenos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/Destinos.html">Destinos</a>
+                            <a class="nav-link" href="./Destinos.html">Destinos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./Tours.html">Tours</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/Contacto.html">Contacto</a>
+                            <a class="nav-link" href="./Contacto.html">Contacto</a>
                         </li>
                     </ul>
-                </div>
+                </section>
             </div>
         </nav>
     </header>
